--- a/autoexec.cfg
+++ b/autoexec.cfg
@@ -8,7 +8,7 @@ echo "[autoexec.cfg] Start of autoexec.cfg";
 // !                                               !
 // ! 1. Start the loader.cfg to load other cfgs    !
 // !                                               !
-// ! 2. **TEMPORARILY** initialize fin_echo.       !
+// ! 2. **TEMPORARILY** initialize echoln.       !
 // !    DON'T CHANGE IT'S VALUE HERE. it will be   !
 // !    overridden later in init.cfg, so go there  !
 // !    and change it to `echo` instead if that's  !
@@ -17,13 +17,9 @@ echo "[autoexec.cfg] Start of autoexec.cfg";
 // ! ! ! ! ! ! ! ! ! ! ! ! ! ! ! ! ! ! ! ! ! ! ! ! !
 
 
-echo "[autoexec.cfg] {1} Temporarily setting preferred echo type to echoln";
-alias "fin_echo" "echoln";                                      // Allows easy changing between echo and echoln commands.
-
-
-fin_echo "[autoexec.cfg] {2} Executing config: './config/loader.cfg'!";
+echoln "[autoexec.cfg] {1} Executing config: './config/loader.cfg'!";
 exec "./config/loader.cfg";
 
 
 
-fin_echo "[autoexec.cfg] End of autoexec.cfg";
+echoln "[autoexec.cfg] End of autoexec.cfg";
