--- a/config/aliases/aliases_controls.cfg
+++ b/config/aliases/aliases_controls.cfg
@@ -1,8 +1,8 @@
-fin_echo "[aliases_controls.cfg] Start of aliases_controls.cfg";
+echoln "[aliases_controls.cfg] Start of aliases_controls.cfg";
 
 
 
-fin_echo "[aliases_controls.cfg] {1} Registering hyper fast spin aliases";
+echoln "[aliases_controls.cfg] {1} Registering hyper fast spin aliases";
 alias "+fin_spin" "m_yaw 1000";                                 // Effectively multiplies your sensitivity approximately 45454
 alias "-fin_spin" "m_yaw 0.022";                                // Sets the multiplier back to normal
 // Changing the default m_yaw is controversial, but I can give
@@ -25,9 +25,9 @@ alias "-fin_spin" "m_yaw 0.022";                                // Sets the mult
 // and we do the same thing for your resolution's aspect ratio
 
 
-fin_echo "[aliases_controls.cfg] {2} Registering detailed scoreboard aliases";
-alias "+fin_scorenet" "cl_showfps 2; cq_netgraph 1; cl_showmem 3; cl_showpos 1; alias fin_scoreboard_fix fin_nothing"; // This gives the scoreboard much more
-alias "-fin_scorenet" "cl_showfps 0; cq_netgraph 0; cl_showmem 0; cl_showpos 0; alias fin_scoreboard_fix fin_scoreboard_off";         // information, at the cost of vision.
+echoln "[aliases_controls.cfg] {2} Registering detailed scoreboard aliases";
+alias "+fin_scorenet" "cl_showfps 2; cq_netgraph 1; cl_showmem 3; cl_showpos 1; alias fin_scoreboard_fix fin_nothing";        // This gives the scoreboard much more
+alias "-fin_scorenet" "cl_showfps 0; cq_netgraph 0; cl_showmem 0; cl_showpos 0; alias fin_scoreboard_fix fin_scoreboard_off"; // information, at the cost of vision.
 
 alias "fin_scorenet"    "fin_scoreneton";                       // Toggle alias for the scorenet
 alias "fin_scoreneton"  "+fin_desubtick_showscores; cl_showfps 2; cq_netgraph 1; cl_showmem 3; alias fin_scorenet fin_scorenetoff";
@@ -37,7 +37,7 @@ alias "fin_scoreboard_fix" "fin_nothing";
 alias "fin_scoreboard_off" "-showscores; -showscores";
 
 
-fin_echo "[aliases_controls.cfg] {3} Registering perfect crouch jump aliases";
+echoln "[aliases_controls.cfg] {3} Registering perfect crouch jump aliases";
 alias "+fin_cjump" "+fin_desubtick_jump; +fin_desubtick_duck;  alias fin_crouched";                     // This is a crouch jump bind, tapping the key performs
 alias "-fin_cjump" "-fin_desubtick_jump; fin_jumped;           alias fin_crouched -fin_desubtick_duck"; // a perfect crouch jump, holding it keeps you crouched.
 
@@ -47,38 +47,38 @@ alias "fin_jumped"  "-fin_desubtick_duck";
 alias "fin_crouched" "-fin_desubtick_duck";
 
 
-fin_echo "[aliases_controls.cfg] {4} Registering better +use aliases";     // For the use spam part, credit to: https://reddit.com/comments/5xila4
-alias "+fin_betteruse" "+fin_desubtick_use; bind mwheeldown fin_usespam;        bind mwheelup  fin_usespam;         gameinstructor_enable true";
-alias "-fin_betteruse" "-fin_desubtick_use; bind mwheeldown fin_highveljump;    bind mwheelup +fin_desubtick_jump;  gameinstructor_enable false";
-alias "fin_usespam"    "-fin_desubtick_use; bind mwheeldown +fin_desubtick_use; bind mwheelup +fin_desubtick_use";
+echoln "[aliases_controls.cfg] {4} Registering better +use aliases";              // For the use spam part, credit to: https://reddit.com/comments/5xila4
+alias "+fin_betteruse" "+fin_desubtick_use; bind mwheeldown fin_usespam;         bind mwheelup  fin_usespam;         gameinstructor_enable true";
+alias "-fin_betteruse" "-fin_desubtick_use; bind mwheeldown +fin_desubtick_jump; bind mwheelup +fin_desubtick_jump;  gameinstructor_enable false";
+alias "fin_usespam"    "-fin_desubtick_use; bind mwheeldown +fin_desubtick_use;  bind mwheelup +fin_desubtick_use";
 
 
-fin_echo "[aliases_controls.cfg] {5} Registering Hold-for-knife aliases";
+echoln "[aliases_controls.cfg] {5} Registering Hold-for-knife aliases";
 alias "+fin_knife" "+fin_autoknifeinspect";                     // Hold-for-knife bind, while holding the key you will
 alias "-fin_knife" "lastinv";                                   // hold your knife and go back to your last gun on release
 
 
-fin_echo "[aliases_controls.cfg] {6} Registering jump throw aliases";
+echoln "[aliases_controls.cfg] {6} Registering jump throw aliases";
 alias "+fin_jthrow" "+fin_desubtick_jump; -fin_desubtick_attack; -fin_desubtick_attack2";
 alias "-fin_jthrow" "-fin_desubtick_jump";
 
 
-fin_echo "[aliases_controls.cfg] {7} Registering alias to disable jumping while shooting";  // Credit to: https://reddit.com/comments/73wcsz
-alias "+noscroll_attack" "+fin_desubtick_attack; bind mwheeldown fin_nothing;     bind mwheelup fin_nothing";
-alias "-noscroll_attack" "-fin_desubtick_attack; bind mwheeldown fin_highveljump; bind mwheelup +fin_desubtick_jump";
+echoln "[aliases_controls.cfg] {7} Registering alias to disable jumping while shooting";  // Credit to: https://reddit.com/comments/73wcsz
+alias "+noscroll_attack" "+fin_desubtick_attack; bind mwheeldown  fin_nothing;        bind mwheelup  fin_nothing";
+alias "-noscroll_attack" "-fin_desubtick_attack; bind mwheeldown +fin_desubtick_jump; bind mwheelup +fin_desubtick_jump";
 
 
-fin_echo "[aliases_controls.cfg] {8} Registering Anti-AFK aliases";
+echoln "[aliases_controls.cfg] {8} Registering Anti-AFK aliases";
 alias "fin_antiafk"  "+fin_desubtick_left; +fin_desubtick_moveright; +fin_desubtick_attack2; +fin_desubtick_sprint";
 alias "fin_antiafk2" "-fin_desubtick_left; -fin_desubtick_moveright; -fin_desubtick_attack2; -fin_desubtick_sprint";
 
 
-fin_echo "[aliases_controls.cfg] {9} Registering long jump aliases";
+echoln "[aliases_controls.cfg] {9} Registering long jump aliases";
 alias "+fin_longjump" "+fin_desubtick_duck; +fin_desubtick_jump";
 alias "-fin_longjump" "-fin_desubtick_duck; -fin_desubtick_jump";
 
 
-fin_echo "[aliases_controls.cfg] {10} Registering null-cancelling movement aliases";
+echoln "[aliases_controls.cfg] {10} Registering null-cancelling movement aliases";
 alias "+fin_ncmforward"    "-fin_desubtick_back;    +fin_desubtick_forward; alias fin_ncmcancelforward fin_fix_forward";
 alias "+fin_ncmback"       "-fin_desubtick_forward; +fin_desubtick_back;    alias fin_ncmcancelback    fin_fix_back";
 alias "+fin_ncmleft"       "-fin_desubtick_right;   +fin_desubtick_left;    alias fin_ncmcancelleft    fin_fix_left";
@@ -87,24 +87,24 @@ alias "-fin_ncmforward"    "-fin_desubtick_forward;  fin_ncmcancelback;     alia
 alias "-fin_ncmback"       "-fin_desubtick_back;     fin_ncmcancelforward;  alias fin_ncmcancelback";
 alias "-fin_ncmleft"       "-fin_desubtick_left;     fin_ncmcancelright;    alias fin_ncmcancelleft";
 alias "-fin_ncmright"      "-fin_desubtick_right;    fin_ncmcancelleft;     alias fin_ncmcancelright";
-alias "fin_fix_forward" "-fin_desubtick_forward; +fin_desubtick_forward";
-alias "fin_fix_back"    "-fin_desubtick_back;    +fin_desubtick_back";
-alias "fin_fix_left"    "-fin_desubtick_left;    +fin_desubtick_left";
-alias "fin_fix_right"   "-fin_desubtick_right;   +fin_desubtick_right";
+alias "fin_fix_forward"    "-fin_desubtick_forward; +fin_desubtick_forward";
+alias "fin_fix_back"       "-fin_desubtick_back;    +fin_desubtick_back";
+alias "fin_fix_left"       "-fin_desubtick_left;    +fin_desubtick_left";
+alias "fin_fix_right"      "-fin_desubtick_right;   +fin_desubtick_right";
 alias "fin_ncmcancelforward" "";
 alias "fin_ncmcancelback"    "";
 alias "fin_ncmcancelleft"    "";
 alias "fin_ncmcancelright"   "";
 
 
-fin_echo "[aliases_controls.cfg] {13} Registering free-acceleration bhop alias";
+echoln "[aliases_controls.cfg] {13} Registering free-acceleration bhop alias";
 alias "fin_highveljump" "+fin_desubtick_jump; -fin_desubtick_back; -fin_desubtick_jump";
 
 
-fin_echo "[aliases_controls.cfg] {14} Registering jump bug aliases";
+echoln "[aliases_controls.cfg] {14} Registering jump bug aliases";
 alias "+fin_jumpbug" "-fin_desubtick_duck; +fin_desubtick_jump";
 alias "-fin_jumpbug" "-fin_desubtick_jump";
 
 
 
-fin_echo "[aliases_controls.cfg] End of aliases_controls.cfg";
+echoln "[aliases_controls.cfg] End of aliases_controls.cfg";
