--- a/config/aliases/aliases_desubtick.cfg
+++ b/config/aliases/aliases_desubtick.cfg
@@ -1,8 +1,8 @@
-fin_echo "[aliases_desubtick.cfg] Start of aliases_desubtick.cfg";
+echoln "[aliases_desubtick.cfg] Start of aliases_desubtick.cfg";
 
 
 
-fin_echo "[aliases_desubtick.cfg] {1} Registering plus aliases";
+echoln "[aliases_desubtick.cfg] {1} Registering plus aliases";
 alias "+fin_desubtick_attack"                 "+attack;                 +attack";
 alias "+fin_desubtick_attack2"                "+attack2;                +attack2";
 alias "+fin_desubtick_back"                   "+back;                   +back";
@@ -46,7 +46,7 @@ alias "+fin_desubtick_radialradio3"           "+radialradio3;           +radialr
 alias "+fin_desubtick_spray_menu"             "+spray_menu;             +spray_menu";
 
 
-fin_echo "[aliases_desubtick.cfg] {1} Registering minus aliases";
+echoln "[aliases_desubtick.cfg] {1} Registering minus aliases";
 alias "-fin_desubtick_attack"                 "-attack;                 -attack;                 -attack";
 alias "-fin_desubtick_attack2"                "-attack2;                -attack2;                -attack2";
 alias "-fin_desubtick_back"                   "-back;                   -back;                   -back";
@@ -91,4 +91,4 @@ alias "-fin_desubtick_spray_menu"             "-spray_menu;             -spray_m
 
 
 
-fin_echo "[aliases_desubtick.cfg] End of aliases_desubtick.cfg";
+echoln "[aliases_desubtick.cfg] End of aliases_desubtick.cfg";
