--- a/config/aliases/aliases_init.cfg
+++ b/config/aliases/aliases_init.cfg
@@ -1,26 +1,26 @@
-fin_echo "[aliases_init.cfg] Start of aliases_init.cfg";
+echoln "[aliases_init.cfg] Start of aliases_init.cfg";
 
 
 
-fin_echo "[aliases_init.cfg] {1} Registering shorthand aliases for common commands";
-alias "dc"  "disconnect";                                       // Disconnect from server
-alias "nc"  "noclip";                                           // Toggle. Player becomes non-solid and flies.  Optional argument of 0 or 1 to force enable/disable
-alias "q"   "quit";                                             // Quit the game
-alias "k"   "kill";                                             // Kills the player with generic damage
-alias "bp"  "bot_place";                                        // Places a bot from the map at where the local player is pointing.
-alias "dbg" "clear; exec ./config/primary/debug.cfg";           // Dumps extensive debug information to console and saves it to a file if possible
+echoln "[aliases_init.cfg] {1} Registering shorthand aliases for common commands";
+alias "dc"  "disconnect";                                     // Disconnect from server
+alias "nc"  "noclip";                                         // Toggle. Player becomes non-solid and flies.  Optional argument of 0 or 1 to force enable/disable
+alias "q"   "quit";                                           // Quit the game
+alias "k"   "kill";                                           // Kills the player with generic damage
+alias "bp"  "bot_place";                                      // Places a bot from the map at where the local player is pointing.
+alias "dbg" "clear; exec ./config/primary/debug.cfg";         // Dumps extensive debug information to console and saves it to a file if possible
 
 
-fin_echo "[aliases_init.cfg] {2} Registering meta utility aliases used by other aliases";
+echoln "[aliases_init.cfg] {2} Registering meta utility aliases used by other aliases";
 alias "fin_keycontainer" "fin_everykey; fin_nothing; fin_scoreboard_fix"; // This will be activated upon pressing almost any key
-alias "fin_nothing"      "//";                                    // Can be used to remove most commands' console output
-alias "fin_everykey"     "";                                      // You can set this in game with: alias "fin_everykey" "commands here";
+alias "fin_nothing"      "//";                                  // Can be used to remove most commands' console output
+alias "fin_everykey"     "";                                    // You can set this in game with: alias "fin_everykey" "commands here";
 alias "fin_onyaw"        "";
 alias "fin_onpitch"      "";
 alias "fin_onmousemove"  "";
 
 
-fin_echo "[aliases_init.cfg] {3} Registering rebindable pitch/yaw aliases";
+echoln "[aliases_init.cfg] {3} Registering rebindable pitch/yaw aliases";
 alias "fin_onyaw" "fin_onmousemove";
 alias "fin_onpitch" "fin_onmousemove";
 alias "fin_onmousemove" "fin_task1; fin_task2; fin_task3; fin_task4; fin_task5; fin_task6; fin_task7; fin_task8; fin_task9";
@@ -39,7 +39,7 @@ alias "fin_override_yaw"   "yaw";
 alias "fin_override_pitch" "pitch";
 
 
-fin_echo "[aliases_init.cfg] {4} Registering input state clearing aliases";
+echoln "[aliases_init.cfg] {4} Registering input state clearing aliases";
 alias "fin_clearall"                        "fin_clear_common; fin_clear_movement; fin_clear_ui; fin_clear_camera; fin_clear_other";
 alias "fin_clear_all"                       "fin_clearall";
 alias "fin_clear_common"                    "fin_clear_attack; fin_clear_attack2; fin_clear_reload; fin_clear_use; fin_clear_voicerecord; fin_clear_lookatweapon";
@@ -91,4 +91,4 @@ alias "fin_clear_bugvoice"                  "-bugvoice;               -bugvoice;
 
 
 
-fin_echo "[aliases_init.cfg] End of aliases_init.cfg";
+echoln "[aliases_init.cfg] End of aliases_init.cfg";
