--- a/config/aliases/aliases_ui.cfg
+++ b/config/aliases/aliases_ui.cfg
@@ -1,13 +1,13 @@
-fin_echo "[aliases_ui.cfg] Start of aliases_ui.cfg";
+echoln "[aliases_ui.cfg] Start of aliases_ui.cfg";
 
 
 
-fin_echo "[aliases_ui.cfg] {1} Registering automatic knife inspection aliases";
+echoln "[aliases_ui.cfg] {1} Registering automatic knife inspection aliases";
 alias "+fin_autoknifeinspect" "slot3";                          // Pull out weapon when the bound key is pressed
 alias "-fin_autoknifeinspect" "+fin_desubtick_lookatweapon";    // Inspect the weapon when the bound key released
 
 
-fin_echo "[aliases_ui.cfg] {2} Registering keybind list aliases";
+echoln "[aliases_ui.cfg] {2} Registering keybind list aliases";
 alias "fin_60percentrow1" "exec ./config/keys/60percentrow1.cfg";
 alias "fin_60percentrow2" "exec ./config/keys/60percentrow2.cfg";
 alias "fin_60percentrow3" "exec ./config/keys/60percentrow3.cfg";
@@ -21,12 +21,12 @@ alias "fin_joystickbinds" "exec ./config/keys/joystickbinds.cfg";
 alias "fin_listeverybind" "fin_60percentrow1; fin_60percentrow2; fin_60percentrow3; fin_60percentrow4; fin_60percentrow5; fin_60percentrow6; fin_80percentkeys; fin_numberpadkeys; fin_mousekeybinds; fin_joystickbinds";
 
 
-fin_echo "[aliases_ui.cfg] {3} Registering grenade crosshair aliases ";
+echoln "[aliases_ui.cfg] {3} Registering grenade crosshair aliases ";
 alias "fin_nadexhon"  "+fin_desubtick_lookatweapon; multvar cl_crosshairsize -18446744073709552000 715827360 200";    // Usage: multvar varName minValue maxValue factor
 alias "fin_nadexhoff" "cl_crosshairsize 2.25"                   // Enabling the nade crosshair can be done dynamically but swapping between a pistol and primary for example would mess disabling it up
 
 
-fin_echo "[aliases_ui.cfg] {4} Registering rainbow crosshair aliases";    // Credit to: https://www.reddit.com/comments/l3f8sq for concept and https://github.com/T1ckbase/cs2-rainbow-crosshair for smoother values
+echoln "[aliases_ui.cfg] {4} Registering rainbow crosshair aliases";    // Credit to: https://www.reddit.com/comments/l3f8sq for concept and https://github.com/T1ckbase/cs2-rainbow-crosshair for smoother values
 exec "./config/rainbow_crosshair/rainbow_crosshair_1.cfg";
 exec "./config/rainbow_crosshair/rainbow_crosshair_2.cfg";
 exec "./config/rainbow_crosshair/rainbow_crosshair_3.cfg";
@@ -38,7 +38,7 @@ exec "./config/rainbow_crosshair/rainbow_crosshair_8.cfg";
 alias "fin_rainbow_crosshair" "fin_rainbow_crosshair_0";
 
 
-fin_echo "[aliases_ui.cfg] {5} Registering rainbow 'RGB' hud aliases";
+echoln "[aliases_ui.cfg] {5} Registering rainbow 'RGB' hud aliases";
 alias "fin_rgbhud" "fin_rgbhud0";                                          // Doesn't use: Side-Based, White (LO), White (HO), White (NO)
 alias "fin_rgbhud0" "cl_hud_color 6;  alias fin_rgbhud fin_rgbhud1";       // Red
 alias "fin_rgbhud1" "cl_hud_color 7;  alias fin_rgbhud fin_rgbhud2";       // Orange
@@ -54,23 +54,23 @@ alias "fin_rgbhud8" "cl_hud_color 5;  alias fin_rgbhud fin_rgbhud0";       // Pu
 //alias "fin_rgbhud" "toggle cl_hud_color 6 7 8 9 10 3 4 11 5";
 
 
-fin_echo "[aliases_ui.cfg] {6} Registering quick streamer mode toggle aliases";
+echoln "[aliases_ui.cfg] {6} Registering quick streamer mode toggle aliases";
 alias "fin_streamermode"     "fin_streamermode_off";
 alias "fin_streamermode_on"  "cl_sanitize_muted_players 1; cl_sanitize_player_names 1; cl_hide_avatar_images 1; cl_mute_enemy_team 1; alias fin_streamermode fin_streamermode_off";
 alias "fin_streamermode_off" "cl_sanitize_muted_players 0; cl_sanitize_player_names 0; cl_hide_avatar_images 0; cl_mute_enemy_team 0; alias fin_streamermode fin_streamermode_on";
 
 
-fin_echo "[aliases_ui.cfg] {7} Registering weapon inspection toggle aliases";
+echoln "[aliases_ui.cfg] {7} Registering weapon inspection toggle aliases";
 alias "fin_toggleinspect"     "fin_toggleinspect_on";
 alias "fin_toggleinspect_on"  "; +fin_desubtick_lookatweapon; alias fin_toggleinspect fin_toggleinspect_off";
 alias "fin_toggleinspect_off" "-fin_desubtick_lookatweapon;   alias fin_toggleinspect fin_toggleinspect_on";
 
 
-fin_echo "[aliases_ui.cfg] {8} Registering screen blocker aliases";
+echoln "[aliases_ui.cfg] {8} Registering screen blocker aliases";
 alias "fin_blockscreen" "fin_blockscreen_off";
-alias "fin_blockscreen_on"  "cl_crosshairdot true; multvar cl_crosshairsize 0 99999999999 1000;  multvar cl_crosshairthickness 0 99999999999 1000;  alias fin_task9 fin_nothing;           alias fin_blockscreen fin_blockscreen_off";
-alias "fin_blockscreen_off" "cl_crosshairdot true; multvar cl_crosshairsize 0 99999999999 0.001; multvar cl_crosshairthickness 0 99999999999 0.001; alias fin_task9 fin_rainbow_crosshair; alias fin_blockscreen fin_blockscreen_on";
+alias "fin_blockscreen_on"  "cl_crosshairdot true;  multvar cl_crosshairsize 0 99999999999 1000;  multvar cl_crosshairthickness 0 99999999999 1000;  alias fin_task9 fin_nothing;           alias fin_blockscreen fin_blockscreen_off";
+alias "fin_blockscreen_off" "cl_crosshairdot false; multvar cl_crosshairsize 0 99999999999 0.001; multvar cl_crosshairthickness 0 99999999999 0.001; alias fin_task9 fin_rainbow_crosshair; alias fin_blockscreen fin_blockscreen_on";
 
 
 
-fin_echo "[aliases_ui.cfg] End of aliases_ui.cfg";
+echoln "[aliases_ui.cfg] End of aliases_ui.cfg";
