--- a/config/defensive_values/defensive_values_1.cfg
+++ b/config/defensive_values/defensive_values_1.cfg
@@ -1,8 +1,8 @@
-fin_echo "[defensive_values_1.cfg] Start of defensive_values_1.cfg";
+echoln "[defensive_values_1.cfg] Start of defensive_values_1.cfg";
 
 
 
-fin_echo "[defensive_values_1.cfg] {1} Fetching first 250 defensive numerical convars";
+echoln "[defensive_values_1.cfg] {1} Fetching first 250 defensive numerical convars";
 incrementvar "_fov"                                                 "-18446744073709552000" "18446744073709552000" "0";
 incrementvar "ai_debug_soundent"                                    "-18446744073709552000" "18446744073709552000" "0";
 incrementvar "ai_debug_soundent_duration"                           "-18446744073709552000" "18446744073709552000" "0";
@@ -256,4 +256,4 @@ incrementvar "cl_ragdoll_physics_enable"                            "-1844674407
 
 
 
-fin_echo "[defensive_values_1.cfg] End of defensive_values_1.cfg";
+echoln "[defensive_values_1.cfg] End of defensive_values_1.cfg";
