--- a/config/defensive_values/defensive_values_2.cfg
+++ b/config/defensive_values/defensive_values_2.cfg
@@ -1,8 +1,8 @@
-fin_echo "[defensive_values_2.cfg] Start of defensive_values_2.cfg";
+echoln "[defensive_values_2.cfg] Start of defensive_values_2.cfg";
 
 
 
-fin_echo "[defensive_values_2.cfg] {1} Fetching second 250 defensive numerical convars";
+echoln "[defensive_values_2.cfg] {1} Fetching second 250 defensive numerical convars";
 incrementvar "cl_random_taser_bone_y"                               "-18446744073709552000" "18446744073709552000" "0";
 incrementvar "cl_random_taser_force_y"                              "-18446744073709552000" "18446744073709552000" "0";
 incrementvar "cl_sequence_debug"                                    "-18446744073709552000" "18446744073709552000" "0";
@@ -256,4 +256,4 @@ incrementvar "bot_eco_limit"                                        "-1844674407
 
 
 
-fin_echo "[defensive_values_2.cfg] End of defensive_values_2.cfg";
+echoln "[defensive_values_2.cfg] End of defensive_values_2.cfg";
