--- a/config/defensive_values/defensive_values_3.cfg
+++ b/config/defensive_values/defensive_values_3.cfg
@@ -1,8 +1,8 @@
-fin_echo "[defensive_values_3.cfg] Start of defensive_values_3.cfg";
+echoln "[defensive_values_3.cfg] Start of defensive_values_3.cfg";
 
 
 
-fin_echo "[defensive_values_3.cfg] {1} Fetching remaining defensive numerical convars";
+echoln "[defensive_values_3.cfg] {1} Fetching remaining defensive numerical convars";
 incrementvar "panorama_console_max_lines"                           "-18446744073709552000" "18446744073709552000" "0";
 incrementvar "panorama_cache_command_list_size_threshold"           "-18446744073709552000" "18446744073709552000" "0";
 incrementvar "r_decals"                                             "-18446744073709552000" "18446744073709552000" "0";
@@ -155,4 +155,4 @@ incrementvar "cl_globallight_slope_scale_depth_bias"                "-1844674407
 
 
 
-fin_echo "[defensive_values_3.cfg] End of defensive_values_3.cfg";
+echoln "[defensive_values_3.cfg] End of defensive_values_3.cfg";
