--- a/config/defensive_values/defensive_values_4.cfg
+++ b/config/defensive_values/defensive_values_4.cfg
@@ -1,8 +1,8 @@
-fin_echo "[defensive_values_4.cfg] Start of defensive_values_4.cfg";
+echoln "[defensive_values_4.cfg] Start of defensive_values_4.cfg";
 
 
 
-fin_echo "[defensive_values_4.cfg] {1} Fetching first 250 defensive boolean convars";
+echoln "[defensive_values_4.cfg] {1} Fetching first 250 defensive boolean convars";
 incrementvar "ai_debug_ragdoll_magnets"                             "-18446744073709552000" "18446744073709552000" "0";
 incrementvar "ai_expression_optimization"                           "-18446744073709552000" "18446744073709552000" "0";
 incrementvar "ai_force_serverside_ragdoll"                          "-18446744073709552000" "18446744073709552000" "0";
@@ -256,4 +256,4 @@ incrementvar "spec_replay_others_experimental"                      "-1844674407
 
 
 
-fin_echo "[defensive_values_4.cfg] End of defensive_values_4.cfg";
+echoln "[defensive_values_4.cfg] End of defensive_values_4.cfg";
