--- a/config/defensive_values/defensive_values_5.cfg
+++ b/config/defensive_values/defensive_values_5.cfg
@@ -1,8 +1,8 @@
-fin_echo "[defensive_values_5.cfg] Start of defensive_values_5.cfg";
+echoln "[defensive_values_5.cfg] Start of defensive_values_5.cfg";
 
 
 
-fin_echo "[defensive_values_5.cfg] {1} Fetching second 250 defensive boolean convars";
+echoln "[defensive_values_5.cfg] {1} Fetching second 250 defensive boolean convars";
 incrementvar "spec_replay_victim_pov"                               "-18446744073709552000" "18446744073709552000" "0";
 incrementvar "ss_voice_hearpartner"                                 "-18446744073709552000" "18446744073709552000" "0";
 incrementvar "stats_collect_gpu"                                    "-18446744073709552000" "18446744073709552000" "0";
@@ -256,4 +256,4 @@ incrementvar "sv_bot_parallel_threat_detection"                     "-1844674407
 
 
 
-fin_echo "[defensive_values_5.cfg] End of defensive_values_5.cfg";
+echoln "[defensive_values_5.cfg] End of defensive_values_5.cfg";
