--- a/config/defensive_values/defensive_values_6.cfg
+++ b/config/defensive_values/defensive_values_6.cfg
@@ -1,8 +1,8 @@
-fin_echo "[defensive_values_6.cfg] Start of defensive_values_6.cfg";
+echoln "[defensive_values_6.cfg] Start of defensive_values_6.cfg";
 
 
 
-fin_echo "[defensive_values_6.cfg] {1} Fetching remaining defensive boolean convars";
+echoln "[defensive_values_6.cfg] {1} Fetching remaining defensive boolean convars";
 incrementvar "sv_clip_penetration_traces_to_players"                "-18446744073709552000" "18446744073709552000" "0";
 incrementvar "sv_disable_reliable_delta_retransmit"                 "-18446744073709552000" "18446744073709552000" "0";
 incrementvar "sv_fistpunch_impact_sounds"                           "-18446744073709552000" "18446744073709552000" "0";
@@ -34,4 +34,4 @@ incrementvar "volume_fog_jitter_offset_random"                      "-1844674407
 
 
 
-fin_echo "[defensive_values_6.cfg] End of defensive_values_6.cfg";
+echoln "[defensive_values_6.cfg] End of defensive_values_6.cfg";
