--- a/config/keys/60percentrow1.cfg
+++ b/config/keys/60percentrow1.cfg
@@ -1,8 +1,8 @@
-fin_echo "[60percentrow1.cfg] Start of 60percentrow1.cfg";
+echoln "[60percentrow1.cfg] Start of 60percentrow1.cfg";
 
 
 
-fin_echo "[60percentrow1.cfg] ";
+echoln "[60percentrow1.cfg] ";
 bind escape;
 bind "F1";
 bind "F2";
@@ -16,8 +16,8 @@ bind "F9";
 bind "F10";
 bind "F11";
 bind "F12";
-fin_echo "[60percentrow1.cfg] ";
+echoln "[60percentrow1.cfg] ";
 
 
 
-fin_echo "[60percentrow1.cfg] End of 60percentrow1.cfg";
+echoln "[60percentrow1.cfg] End of 60percentrow1.cfg";
