--- a/config/keys/60percentrow2.cfg
+++ b/config/keys/60percentrow2.cfg
@@ -1,8 +1,8 @@
-fin_echo "[60percentrow2.cfg] Start of 60percentrow2.cfg";
+echoln "[60percentrow2.cfg] Start of 60percentrow2.cfg";
 
 
 
-fin_echo "[60percentrow2.cfg] ";
+echoln "[60percentrow2.cfg] ";
 bind "`";
 bind "1";
 bind "2";
@@ -17,8 +17,8 @@ bind "0";
 bind "-";
 bind "=";
 bind "BACKSPACE";
-fin_echo "[60percentrow2.cfg] ";
+echoln "[60percentrow2.cfg] ";
 
 
 
-fin_echo "[60percentrow2.cfg] End of 60percentrow2.cfg";
+echoln "[60percentrow2.cfg] End of 60percentrow2.cfg";
