--- a/config/keys/60percentrow3.cfg
+++ b/config/keys/60percentrow3.cfg
@@ -1,8 +1,8 @@
-fin_echo "[60percentrow3.cfg] Start of 60percentrow3.cfg";
+echoln "[60percentrow3.cfg] Start of 60percentrow3.cfg";
 
 
 
-fin_echo "[60percentrow3.cfg] ";
+echoln "[60percentrow3.cfg] ";
 bind "TAB";
 bind "Q";
 bind "W";
@@ -17,8 +17,8 @@ bind "P";
 bind "[";
 bind "]";
 bind \;
-fin_echo "[60percentrow3.cfg] ";
+echoln "[60percentrow3.cfg] ";
 
 
 
-fin_echo "[60percentrow3.cfg] End of 60percentrow3.cfg";
+echoln "[60percentrow3.cfg] End of 60percentrow3.cfg";
