--- a/config/keys/60percentrow4.cfg
+++ b/config/keys/60percentrow4.cfg
@@ -1,8 +1,8 @@
-fin_echo "[60percentrow4.cfg] Start of 60percentrow4.cfg";
+echoln "[60percentrow4.cfg] Start of 60percentrow4.cfg";
 
 
 
-fin_echo "[60percentrow4.cfg] ";
+echoln "[60percentrow4.cfg] ";
 bind "CAPSLOCK";
 bind "A";
 bind "S";
@@ -16,8 +16,8 @@ bind "L";
 bind "SEMICOLON";
 bind "'";
 bind "ENTER";
-fin_echo "[60percentrow4.cfg] ";
+echoln "[60percentrow4.cfg] ";
 
 
 
-fin_echo "[60percentrow4.cfg] End of 60percentrow4.cfg";
+echoln "[60percentrow4.cfg] End of 60percentrow4.cfg";
