--- a/config/keys/joystickbinds.cfg
+++ b/config/keys/joystickbinds.cfg
@@ -1,8 +1,8 @@
-fin_echo "[joystickbinds.cfg] Start of joystickbinds.cfg";
+echoln "[joystickbinds.cfg] Start of joystickbinds.cfg";
 
 
 
-fin_echo "[joystickbinds.cfg] ";
+echoln "[joystickbinds.cfg] ";
 bind "JOY1";
 bind "JOY2";
 bind "JOY3";
@@ -43,8 +43,8 @@ bind "POV_UP";
 bind "POV_DOWN";
 bind "POV_LEFT";
 bind "POV_RIGHT";
-fin_echo "[joystickbinds.cfg] ";
+echoln "[joystickbinds.cfg] ";
 
 
 
-fin_echo "[joystickbinds.cfg] End of joystickbinds.cfg";
+echoln "[joystickbinds.cfg] End of joystickbinds.cfg";
