--- a/config/keys/mousekeybinds.cfg
+++ b/config/keys/mousekeybinds.cfg
@@ -1,8 +1,8 @@
-fin_echo "[mousekeybinds.cfg] Start of mousekeybinds.cfg";
+echoln "[mousekeybinds.cfg] Start of mousekeybinds.cfg";
 
 
 
-fin_echo "[mousekeybinds.cfg] ";
+echoln "[mousekeybinds.cfg] ";
 bind "MOUSE1";
 bind "MOUSE2";
 bind "MOUSE3";
@@ -12,8 +12,8 @@ bind "MWHEELUP";
 bind "MWHEELDOWN";
 bind "MOUSE_X";
 bind "MOUSE_Y";
-fin_echo "[mousekeybinds.cfg] ";
+echoln "[mousekeybinds.cfg] ";
 
 
 
-fin_echo "[mousekeybinds.cfg] End of mousekeybinds.cfg";
+echoln "[mousekeybinds.cfg] End of mousekeybinds.cfg";
