--- a/config/primary/audio.cfg
+++ b/config/primary/audio.cfg
@@ -1,11 +1,11 @@
-fin_echo "[audio.cfg] Start of audio.cfg";
+echoln "[audio.cfg] Start of audio.cfg";
 
 
 
-fin_echo "[audio.cfg] {1} Adjusting volume levels";
+echoln "[audio.cfg] {1} Adjusting volume levels";
 snd_mapobjective_volume "0.0025";                               // Changes the "bomb..planted" and "taken..hostage" voice over volume (Max is 0.60, .006 is 1% of that)
 snd_tensecondwarning_volume "0";                                // Changes the ten second warning music volume (Max is 0.60, .06 is 10% of that)
-snd_deathcamera_volume "0.0025";                                // Changes the death camera music volume (Max is 0.60, .03 is 5% of that)
+snd_deathcamera_volume "0";                                     // Changes the death camera music volume (Max is 0.60, .03 is 5% of that)
 snd_roundstart_volume "0";                                      // Changes the round start music volume (Max is 0.60)
 snd_menumusic_volume "0";                                       // Changes the main menu   music volume (Max is 0.60, .06 is 10% of that)
 snd_roundend_volume "0";                                        // Changes the round end   music volume (Max is 0.60)
@@ -33,7 +33,7 @@ snd_mvp_volume "0.03";                                          // Changes the m
 // %100 = 1
 
 
-fin_echo "[audio.cfg] {2} Changing miscellaneous sound settings";
+echoln "[audio.cfg] {2} Changing miscellaneous sound settings";
 cl_borrow_music_from_player_slot "-1";
 sv_ignoregrenaderadio "true";                                   // Turn off Fire in the hole messages
 snd_headphone_eq "1";                                           // Select Headphone EQ Preset (0: Natural, 1: Crisp, 2: Smooth)
@@ -53,4 +53,4 @@ bot_chatter "off";                                              // Control how b
 
 
 
-fin_echo "[audio.cfg] End of audio.cfg";
+echoln "[audio.cfg] End of audio.cfg";
