--- a/config/primary/debug.cfg
+++ b/config/primary/debug.cfg
@@ -1,45 +1,45 @@
-fin_echo "[debug.cfg] Start of debug.cfg";
+echoln "[debug.cfg] Start of debug.cfg";
 
 
 
-fin_echo "[debug.cfg] {1} Printing debug information and saving console log";
-fin_echo "[debug.cfg]  ";
+echoln "[debug.cfg] {1} Printing debug information and saving console log";
+echoln "[debug.cfg]  ";
 fin_def_fetch;                                                  // Custom alias to fetch value of numerical/boolean defensive convars
-fin_echo "[debug.cfg]  ";
+echoln "[debug.cfg]  ";
 sys_info;                                                       // Print system information to the console
-fin_echo "[debug.cfg]  ";
+echoln "[debug.cfg]  ";
 demo_info;                                                      // Print version info string.
-fin_echo "[debug.cfg]  ";
+echoln "[debug.cfg]  ";
 status;                                                         // Print connection status
-fin_echo "[debug.cfg]  ";
+echoln "[debug.cfg]  ";
 status_json;                                                    // Print status in JSON format
-fin_echo "[debug.cfg]  ";
+echoln "[debug.cfg]  ";
 net_status;                                                     // Shows current network status
-fin_echo "[debug.cfg]  ";
+echoln "[debug.cfg]  ";
 tv_broadcast_status;                                            // Print out broadcast status
-fin_echo "[debug.cfg]  ";
+echoln "[debug.cfg]  ";
 tv_status;                                                      // Show SourceTV server status.
-fin_echo "[debug.cfg]  ";
+echoln "[debug.cfg]  ";
 demo_info;                                                      // Print information about currently playing demo.
-fin_echo "[debug.cfg]  ";
+echoln "[debug.cfg]  ";
 soundinfo;                                                      // Describe the current sound device with an active voice list.
-fin_echo "[debug.cfg]  ";
+echoln "[debug.cfg]  ";
 install_dlc_workshoptools_cvar;                                 // DLC Install Status
-fin_echo "[debug.cfg]  ";
+echoln "[debug.cfg]  ";
 trusted_launch;                                                 // Trusted launch status
-fin_echo "[debug.cfg]  ";
+echoln "[debug.cfg]  ";
 hostname;                                                       // Hostname for server.
-fin_echo "[debug.cfg]  ";
+echoln "[debug.cfg]  ";
 name;
-fin_echo "[debug.cfg]  ";
+echoln "[debug.cfg]  ";
 tv_name;                                                        // SourceTV host name
-fin_echo "[debug.cfg]  ";
+echoln "[debug.cfg]  ";
 tv_title;                                                       // Set title for SourceTV spectator UI
-fin_echo "[debug.cfg]  ";
+echoln "[debug.cfg]  ";
 condump;                                                        // dump the text currently in the console to condumpXX.log
 
 
-fin_echo "[debug.cfg] {2} Clearing and resetting with various defensive commands";
+echoln "[debug.cfg] {2} Clearing and resetting with various defensive commands";
 _resetgamestats;                                                // Erases current game stats and writes out a blank stats file
 bugvoice_clear;                                                 // Clear voice attachment data.
 cc_flush;                                                       // Flushes async'd captions.
@@ -72,7 +72,7 @@ vprof_reset_peaks;                                              // Reset just th
 vprof_reset;                                                    // Reset the stats in VProf profiler
 
 
-fin_echo "[debug.cfg] {3} Clearing and resetting with various cheat commands";
+echoln "[debug.cfg] {3} Clearing and resetting with various cheat commands";
 cl_ent_clear_debug_overlays;                                    // Clears all debug overlays
 cl_ent_text_sticky_clear;                                       // Clears the list of names to display text debugging information about the given entity(ies) on top of the entity (See Overlay Text) Arguments: {entity_name} / {class_name} / {entity_index} / {no argument = pick what player is looking at}
 cl_script_clear_watches;                                        // Clear all watches from the game debug overlay
@@ -91,7 +91,7 @@ reloadgame;                                                     // Reload the mo
 rr_reloadresponsesystems;                                       // Reload all response system scripts.
 
 
-fin_echo "[debug.cfg] {4} Clearing and resetting with various unprotected commands";
+echoln "[debug.cfg] {4} Clearing and resetting with various unprotected commands";
 //unbindall;	                                                  // Unbind all keys.
 //binddefaults;                                                 // Bind all keys to their default values.
 //clear;    // hides debug data                                 // Clear console output.
@@ -100,4 +100,4 @@ mp_bot_ai_bt_clear_cache;                                       // Clears the ca
 
 
 
-fin_echo "[debug.cfg] End of debug.cfg";
+echoln "[debug.cfg] End of debug.cfg";
