--- a/config/primary/safety.cfg
+++ b/config/primary/safety.cfg
@@ -1,8 +1,8 @@
-fin_echo "[safety.cfg] Start of safety.cfg";
+echoln "[safety.cfg] Start of safety.cfg";
 
 
 
-fin_echo "[safety.cfg] {1} Privacy & safety settings";
+echoln "[safety.cfg] {1} Privacy & safety settings";
 cl_mute_all_but_friends_and_party "0";                          // Only allow communication from friends and matchmaking party members. Set to 1 to apply the in non-competitive game modes. Set to 2 will apply the setting in all modes.
 cl_server_graphic1_enable "false";                              // When enabled, 360x60 (<16kb) image file will be displayed to on-server spectators.
 cl_server_graphic2_enable "false";                              // When enabled, 220x45 (<16kb) image file will be displayed to on-server spectators.
@@ -20,7 +20,6 @@ sv_tags "hidden";                                               // Server tags. 
 sv_pure "2";                                                    // Forces all client files to match the server's (except for a certain exempt files)
 sv_pure_trace "1";                                              // If set to 1, the server will print a message whenever a client is verifying a CRC for a file.
 sv_prime_accounts_only "true";                                  // When this setting is enabled only prime users can connect to this game server.
-sv_invites_only_mainmenu "true";                                // If turned on, will ignore all invites when user is playing a match
 sv_kick_players_with_cooldown "2";                              // (0: do not kick on insecure servers; 1: kick players with Untrusted status or convicted by Overwatch; 2: kick players with any cooldown)
 sv_playerradio_use_allowlist "true";                            // playerradio commands may only use responses from an allow list of commands.
 sv_server_verify_blood_on_player "true";
@@ -50,4 +49,4 @@ cl_chatfilters "2147483647";
 
 
 
-fin_echo "[safety.cfg] End of safety.cfg";
+echoln "[safety.cfg] End of safety.cfg";
