--- a/config/primary/ui.cfg
+++ b/config/primary/ui.cfg
@@ -1,8 +1,8 @@
-fin_echo "[ui.cfg] Start of ui.cfg";
+echoln "[ui.cfg] Start of ui.cfg";
 
 
 
-fin_echo "[ui.cfg] {1} Changing the radar";
+echoln "[ui.cfg] {1} Changing the radar";
 cl_radar_square_with_scoreboard "false";                        // If set, the radar will toggle to square when the scoreboard is visible.
 cl_radar_always_centered "false";                               // If set to 0, the radar is maximally used. Otherwise the player is always centered, even at map extents.
 cl_radar_icon_scale_min "0.4";                                  // Sets the minimum icon scale. Valid values are 0.4 to 1.25.
@@ -11,7 +11,7 @@ cl_radar_rotate "false";                                        // Enables/disab
 cl_radar_scale "0.4";                                           // Sets the radar scale. Valid values are 0.25 to 1.0.
 
 
-fin_echo "[ui.cfg] {2} Changing the crosshair";                   // Slightly tweaked version of the one from here: https://www.reddit.com/comments/3pyf1f
+echoln "[ui.cfg] {2} Changing the crosshair";                   // Slightly tweaked version of the one from here: https://www.reddit.com/comments/3pyf1f
 cl_crosshair_sniper_show_normal_inaccuracy "true";              // Include standing inaccuracy when determining sniper crosshair blur
 cl_crosshair_dynamic_splitalpha_outermod "0.5";                 // If using cl_crosshairstyle 2, this is the alpha modification that will be used for the OUTER crosshair pips once they've split.
 cl_crosshair_dynamic_splitalpha_innermod "1";                   // If using cl_crosshairstyle 2, this is the alpha modification that will be used for the INNER crosshair pips once they've split.
@@ -36,11 +36,11 @@ cl_crosshaircolor "5";                                          // Set crosshair
 cl_crosshairgap "-1";                                           // Determines how far the crosshair lines are from the center of the screen
 cl_crosshairdot "false";                                        // 0: No dot in the center of the crosshair 1: Add a static dot to the center of the crosshair
 cl_crosshair_t "false";                                         // T style crosshair
-crosshair  "true";
+crosshair "true";
 fin_blockscreen_on;
 
 
-fin_echo "[ui.cfg] {3} Adjusting the HUD";
+echoln "[ui.cfg] {3} Adjusting the HUD";
 cl_teamcounter_playercount_instead_of_avatars "true";
 cl_show_equipped_character_for_player_avatars "true";
 cl_scoreboard_survivors_always_on "true";                       // Fixes a problem calculating the number of dead players when rounds end
@@ -53,7 +53,7 @@ cl_allow_animated_avatars "false";                              // Whether or no
 cl_teamid_overhead_mode "2";                                    // Always show team ID over teammates. 1 = pips; 2 = pips, name, and equipment
 cl_drawhud_force_radar "1";                                     // 0: default; 1: draw radar even if hud disabled; -1: force no radar
 cl_drawhud_specvote "true";                                     // 1: default; 0: disables vote UI for spectators
-cl_hud_radar_scale "2";                                         // Sets the radar to its default scale, changing this can be buggy
+cl_hud_radar_scale "1.3";                                       // Sets the radar to its default scale, changing this can be buggy
 cl_showloadout "true";                                          // Toggles display of current loadout.
 cl_drawhud "true";                                              // Enable the rendering of the hud
 hidehud "0";                                                    // bitmask: 1=weapon selection, 2=flashlight, 4=all, 8=health, 16=player dead, 32=needssuit, 64=misc, 128=chat, 256=crosshair, 512=vehicle crosshair, 1024=in vehicle
@@ -69,7 +69,7 @@ ui_steam_overlay_notification_position "topright";              // Steam overlay
 sv_show_teammate_death_notification "true";                     // Show chat notification upon teammate death
 
 
-fin_echo "[ui.cfg] {3} Final HUD Adjustments";
+echoln "[ui.cfg] {3} Final HUD Adjustments";
 cl_hud_color "12";                                              // Sets the hud color to show player colors
 //
 // cl_hud_color 0   = VARIES (RRR, GGG, BBB) CT Blue (97c9fa (151, 201, 250)) or T Orange (eabf55 (234, 191, 85)) (based on side)
@@ -126,4 +126,4 @@ cl_inventory_saved_sort2 "inv_sort_rarity"
 
 
 
-fin_echo "[ui.cfg] End of ui.cfg";
+echoln "[ui.cfg] End of ui.cfg";
