--- a/config/prog/prog_core.cfg
+++ b/config/prog/prog_core.cfg
@@ -1,4 +1,4 @@
-fin_echo "[prog_core.cfg] Start of prog_core.cfg";
+echoln "[prog_core.cfg] Start of prog_core.cfg";
 
 
 
@@ -547,4 +547,4 @@ alias "fin_keys_controller"     "fin_nothing";
 
 
 
-fin_echo "[prog_core.cfg] End  of prog_core.cfg";
+echoln "[prog_core.cfg] End  of prog_core.cfg";
