--- a/config/rainbow_crosshair/rainbow_crosshair_1.cfg
+++ b/config/rainbow_crosshair/rainbow_crosshair_1.cfg
@@ -1,4 +1,4 @@
-fin_echo "[rainbow_crosshair_1.cfg] Start of rainbow_crosshair_1.cfg";
+echoln "[rainbow_crosshair_1.cfg] Start of rainbow_crosshair_1.cfg";
 
 
 
@@ -107,4 +107,4 @@ alias "fin_rainbow_crosshair_100" "cl_crosshaircolor_r 225;                     
 
 
 
-fin_echo "[rainbow_crosshair_1.cfg] End of rainbow_crosshair_1.cfg";
+echoln "[rainbow_crosshair_1.cfg] End of rainbow_crosshair_1.cfg";
