--- a/config/rainbow_crosshair/rainbow_crosshair_7.cfg
+++ b/config/rainbow_crosshair/rainbow_crosshair_7.cfg
@@ -1,4 +1,4 @@
-fin_echo "[rainbow_crosshair_7.cfg] Start of rainbow_crosshair_7.cfg";
+echoln "[rainbow_crosshair_7.cfg] Start of rainbow_crosshair_7.cfg";
 
 
 
@@ -107,4 +107,4 @@ alias "fin_rainbow_crosshair_706" "cl_crosshaircolor_r 112; cl_crosshaircolor_g 
 
 
 
-fin_echo "[rainbow_crosshair_7.cfg] End of rainbow_crosshair_7.cfg";
+echoln "[rainbow_crosshair_7.cfg] End of rainbow_crosshair_7.cfg";
