--- a/config/rainbow_crosshair/rainbow_crosshair_8.cfg
+++ b/config/rainbow_crosshair/rainbow_crosshair_8.cfg
@@ -1,4 +1,4 @@
-fin_echo "[rainbow_crosshair_8.cfg] Start of rainbow_crosshair_8.cfg";
+echoln "[rainbow_crosshair_8.cfg] Start of rainbow_crosshair_8.cfg";
 
 
 
@@ -19,4 +19,4 @@ alias "fin_rainbow_crosshair_719" "cl_crosshaircolor_r 126; cl_crosshaircolor_g 
 
 
 
-fin_echo "[rainbow_crosshair_8.cfg] End of rainbow_crosshair_8.cfg";
+echoln "[rainbow_crosshair_8.cfg] End of rainbow_crosshair_8.cfg";
