--- a/config/utility/grammarly/disconnect.cfg
+++ b/config/utility/grammarly/disconnect.cfg
@@ -1,4 +1,4 @@
-fin_echo "[disconnect.cfg] Start of disconnect.cfg";
+echoln "[disconnect.cfg] Start of disconnect.cfg";
 
 
 
@@ -143,4 +143,4 @@ alias "idsconnect"  "disconnect";
 
 
 
-fin_echo "[disconnect.cfg] End of disconnect.cfg";
+echoln "[disconnect.cfg] End of disconnect.cfg";
