--- a/config/utility/items.cfg
+++ b/config/utility/items.cfg
@@ -1,48 +1,48 @@
-fin_echo "[items.cfg] Start of items.cfg";
+echoln "[items.cfg] Start of items.cfg";
 
 
 
-fin_echo "[items.cfg] ";
-fin_echo "[items.cfg] +---------------+----------------------------------+";
-fin_echo "[items.cfg] | fin_axe           | Danger Zone Axe/Hatchet          |";
-fin_echo "[items.cfg] | fin_bayonet       | Non-M9 Bayonet Knife             |";
-fin_echo "[items.cfg] | fin_bowie         | Bowie Knife                      |";
-fin_echo "[items.cfg] | fin_breachcharge  | Danger Zone Breach Charges       |";
-fin_echo "[items.cfg] | fin_bumpmine      | Danger Zone Bump Mines           |";
-fin_echo "[items.cfg] | fin_butterfly     | Butterfly Knife                  |";
-fin_echo "[items.cfg] | fin_c4            | C4 Explosive (Defuse mode bomb)  |";
-fin_echo "[items.cfg] | fin_classic       | Classic Knife                    |";
-fin_echo "[items.cfg] | fin_ctknife       | Default Counter Terrorist Knife  |";
-fin_echo "[items.cfg] | fin_exo           | Exo Knife                        |";
-fin_echo "[items.cfg] | fin_falchion      | Falchion Knife                   |";
-fin_echo "[items.cfg] | fin_fists         | Danger Zone Fists                |";
-fin_echo "[items.cfg] | fin_flip          | Flip Knife                       |";
-fin_echo "[items.cfg] | fin_gold          | Golden Knife (From Arms Race)    |";
-fin_echo "[items.cfg] | fin_gut           | Gut Knife                        |";
-fin_echo "[items.cfg] | fin_hammer        | Hammer                           |";
-fin_echo "[items.cfg] | fin_healthshot    | Medi-Shots                       |";
-fin_echo "[items.cfg] | fin_huntsman      | Huntsman Knife                   |";
-fin_echo "[items.cfg] | fin_karambit      | Karambit Knife                   |";
-fin_echo "[items.cfg] | fin_m9bayonet     | M9 Bayonet Knife                 |";
-fin_echo "[items.cfg] | fin_navaja        | Navaja Knife                     |";
-fin_echo "[items.cfg] | fin_nomad         | Nomad Knife                      |";
-fin_echo "[items.cfg] | fin_paracord      | Paracord Knife                   |";
-fin_echo "[items.cfg] | fin_riotshield    | Riot Shield/Tactical Shield      |";
-fin_echo "[items.cfg] | fin_shadowdaggers | Shadow Daggers Knives            |";
-fin_echo "[items.cfg] | fin_skeleton      | Skeleton Knife                   |";
-fin_echo "[items.cfg] | fin_spectral      | Spectral (Halloween Ghost) Knife |";
-fin_echo "[items.cfg] | fin_stiletto      | Stiletto Knife                   |";
-fin_echo "[items.cfg] | fin_survival      | Survival Knife                   |";
-fin_echo "[items.cfg] | fin_tablet        | Danger Zone Map Tablet           |";
-fin_echo "[items.cfg] | fin_tagrenade     | Tactical Awareness (ESP) Grenade |";
-fin_echo "[items.cfg] | fin_talon         | Talon Knife                      |";
-fin_echo "[items.cfg] | fin_tknife        | Default Terrorist Knife          |";
-fin_echo "[items.cfg] | fin_ursus         | Ursus Knife                      |";
-fin_echo "[items.cfg] | fin_wrench        | Wrench/Spanner                   |";
-fin_echo "[items.cfg] | fin_zeus          | Zeus x27                         |";
-fin_echo "[items.cfg] +---------------+----------------------------------+";
-fin_echo "[items.cfg] ";
+echoln "[items.cfg] ";
+echoln "[items.cfg] +---------------+----------------------------------+";
+echoln "[items.cfg] | fin_axe           | Danger Zone Axe/Hatchet          |";
+echoln "[items.cfg] | fin_bayonet       | Non-M9 Bayonet Knife             |";
+echoln "[items.cfg] | fin_bowie         | Bowie Knife                      |";
+echoln "[items.cfg] | fin_breachcharge  | Danger Zone Breach Charges       |";
+echoln "[items.cfg] | fin_bumpmine      | Danger Zone Bump Mines           |";
+echoln "[items.cfg] | fin_butterfly     | Butterfly Knife                  |";
+echoln "[items.cfg] | fin_c4            | C4 Explosive (Defuse mode bomb)  |";
+echoln "[items.cfg] | fin_classic       | Classic Knife                    |";
+echoln "[items.cfg] | fin_ctknife       | Default Counter Terrorist Knife  |";
+echoln "[items.cfg] | fin_exo           | Exo Knife                        |";
+echoln "[items.cfg] | fin_falchion      | Falchion Knife                   |";
+echoln "[items.cfg] | fin_fists         | Danger Zone Fists                |";
+echoln "[items.cfg] | fin_flip          | Flip Knife                       |";
+echoln "[items.cfg] | fin_gold          | Golden Knife (From Arms Race)    |";
+echoln "[items.cfg] | fin_gut           | Gut Knife                        |";
+echoln "[items.cfg] | fin_hammer        | Hammer                           |";
+echoln "[items.cfg] | fin_healthshot    | Medi-Shots                       |";
+echoln "[items.cfg] | fin_huntsman      | Huntsman Knife                   |";
+echoln "[items.cfg] | fin_karambit      | Karambit Knife                   |";
+echoln "[items.cfg] | fin_m9bayonet     | M9 Bayonet Knife                 |";
+echoln "[items.cfg] | fin_navaja        | Navaja Knife                     |";
+echoln "[items.cfg] | fin_nomad         | Nomad Knife                      |";
+echoln "[items.cfg] | fin_paracord      | Paracord Knife                   |";
+echoln "[items.cfg] | fin_riotshield    | Riot Shield/Tactical Shield      |";
+echoln "[items.cfg] | fin_shadowdaggers | Shadow Daggers Knives            |";
+echoln "[items.cfg] | fin_skeleton      | Skeleton Knife                   |";
+echoln "[items.cfg] | fin_spectral      | Spectral (Halloween Ghost) Knife |";
+echoln "[items.cfg] | fin_stiletto      | Stiletto Knife                   |";
+echoln "[items.cfg] | fin_survival      | Survival Knife                   |";
+echoln "[items.cfg] | fin_tablet        | Danger Zone Map Tablet           |";
+echoln "[items.cfg] | fin_tagrenade     | Tactical Awareness (ESP) Grenade |";
+echoln "[items.cfg] | fin_talon         | Talon Knife                      |";
+echoln "[items.cfg] | fin_tknife        | Default Terrorist Knife          |";
+echoln "[items.cfg] | fin_ursus         | Ursus Knife                      |";
+echoln "[items.cfg] | fin_wrench        | Wrench/Spanner                   |";
+echoln "[items.cfg] | fin_zeus          | Zeus x27                         |";
+echoln "[items.cfg] +---------------+----------------------------------+";
+echoln "[items.cfg] ";
 
 
 
-fin_echo "[items.cfg] End of items.cfg";
+echoln "[items.cfg] End of items.cfg";
