--- a/config/utility/positions.cfg
+++ b/config/utility/positions.cfg
@@ -1,27 +1,27 @@
-fin_echo "[positions.cfg] Start of positions.cfg";
+echoln "[positions.cfg] Start of positions.cfg";
 
 
 
-fin_echo "[positions.cfg] ";
-fin_echo "[positions.cfg] +-------------+----------------------------------+";
-fin_echo "[positions.cfg] | de_cache    | Setpos positions for Cache       |";
-fin_echo "[positions.cfg] | de_dust2    | Setpos positions for Dust 2      |";
-fin_echo "[positions.cfg] | de_inferno  | Setpos positions for Inferno     |";
-fin_echo "[positions.cfg] | de_mirage   | Setpos positions for Mirage      |";
-fin_echo "[positions.cfg] | de_nuke     | Setpos positions for Nuke        |";
-fin_echo "[positions.cfg] | de_overpass | Setpos positions for Overpass    |";
-fin_echo "[positions.cfg] | *de_ancient | No list of setpos positions yet  |";
-fin_echo "[positions.cfg] | *de_train   | No list of setpos positions yet  |";
-fin_echo "[positions.cfg] | *de_agency  | No list of setpos positions yet  |";
-fin_echo "[positions.cfg] | *cs_agency  | No list of setpos positions yet  |";
-fin_echo "[positions.cfg] | *cs_office  | No list of setpos positions yet  |";
-fin_echo "[positions.cfg] | *de_iris    | No list of setpos positions yet  |";
-fin_echo "[positions.cfg] | *cs_climb   | No list of setpos positions yet  |";
-fin_echo "[positions.cfg] +-------------+----------------------------------+";
-fin_echo "[positions.cfg]  * Maps marked with an asterisk have no list yet,";
-fin_echo "[positions.cfg]    they'll be added eventually, aren't there now.";
-fin_echo "[positions.cfg] ";
+echoln "[positions.cfg] ";
+echoln "[positions.cfg] +-------------+----------------------------------+";
+echoln "[positions.cfg] | de_cache    | Setpos positions for Cache       |";
+echoln "[positions.cfg] | de_dust2    | Setpos positions for Dust 2      |";
+echoln "[positions.cfg] | de_inferno  | Setpos positions for Inferno     |";
+echoln "[positions.cfg] | de_mirage   | Setpos positions for Mirage      |";
+echoln "[positions.cfg] | de_nuke     | Setpos positions for Nuke        |";
+echoln "[positions.cfg] | de_overpass | Setpos positions for Overpass    |";
+echoln "[positions.cfg] | *de_ancient | No list of setpos positions yet  |";
+echoln "[positions.cfg] | *de_train   | No list of setpos positions yet  |";
+echoln "[positions.cfg] | *de_agency  | No list of setpos positions yet  |";
+echoln "[positions.cfg] | *cs_agency  | No list of setpos positions yet  |";
+echoln "[positions.cfg] | *cs_office  | No list of setpos positions yet  |";
+echoln "[positions.cfg] | *de_iris    | No list of setpos positions yet  |";
+echoln "[positions.cfg] | *cs_climb   | No list of setpos positions yet  |";
+echoln "[positions.cfg] +-------------+----------------------------------+";
+echoln "[positions.cfg]  * Maps marked with an asterisk have no list yet,";
+echoln "[positions.cfg]    they'll be added eventually, aren't there now.";
+echoln "[positions.cfg] ";
 
 
 
-fin_echo "[positions.cfg] End of positions.cfg";
+echoln "[positions.cfg] End of positions.cfg";
