--- a/config/utility/skinpictures.cfg
+++ b/config/utility/skinpictures.cfg
@@ -1,4 +1,4 @@
-fin_echo "[skinpictures.cfg] Start of skinpictures.cfg";
+echoln "[skinpictures.cfg] Start of skinpictures.cfg";
 
 
 
@@ -19,4 +19,4 @@ hud_showtargetid "false";               // Enables display of target names
 
 
 
-fin_echo "[skinpictures.cfg] End of skinpictures.cfg";
+echoln "[skinpictures.cfg] End of skinpictures.cfg";
