--- a/config/aliases/aliases_visuals.cfg
+++ b/config/aliases/aliases_visuals.cfg
@@ -1,8 +1,8 @@
-fin_echo "[aliases_visuals.cfg] Start of aliases_visuals.cfg";
+echoln "[aliases_visuals.cfg] Start of aliases_visuals.cfg";
 
 
 
-fin_echo "[aliases_visuals.cfg] Registering left-handed toggle alias";
+echoln "[aliases_visuals.cfg] Registering left-handed toggle alias";
 alias "fin_handswap"  "fin_lefthand";                                           // Toggle between left and right hand
 alias "fin_lefthand"  "cl_righthand false; alias fin_handswap fin_righthand";   // These are used to let you toggle between a left
 alias "fin_righthand" "cl_righthand true;  alias fin_handswap fin_lefthand";    // handed viewmodel and a right handed one.
@@ -12,7 +12,7 @@ alias "fin_centeredhand" "viewmodel_offset_x -2;   alias fin_handswap fin_righth
 alias "fin_righthanded"  "viewmodel_offset_x  2.5; alias fin_handswap fin_centeredhand";
 
 
-fin_echo "[aliases_visuals.cfg] Registering custom viewmodel preset aliases";
+echoln "[aliases_visuals.cfg] Registering custom viewmodel preset aliases";
 alias "fin_vmp_lowfov"  "viewmodel_offset_x  2.50; viewmodel_offset_y -2; viewmodel_offset_z -2;   viewmodel_fov 54";
 alias "fin_vmp_highfov" "viewmodel_offset_x  2.50; viewmodel_offset_y  2; viewmodel_offset_z -2;   viewmodel_fov 68";
 alias "fin_vmp_skins"   "viewmodel_offset_x  0;    viewmodel_offset_y  0; viewmodel_offset_z  0;   viewmodel_fov 68";
@@ -25,4 +25,4 @@ alias "fin_vmp_knife"   "viewmodel_offset_x  0;    viewmodel_offset_y  2; viewmo
 
 
 
-fin_echo "[aliases_visuals.cfg] End of aliases_visuals.cfg";
+echoln "[aliases_visuals.cfg] End of aliases_visuals.cfg";
