--- a/config/keys/80percentkeys.cfg
+++ b/config/keys/80percentkeys.cfg
@@ -1,8 +1,8 @@
-fin_echo "[60percentrow7.cfg] Start of 60percentrow7.cfg";
+echoln "[60percentrow7.cfg] Start of 60percentrow7.cfg";
 
 
 
-fin_echo "[60percentrow7.cfg] ";
+echoln "[60percentrow7.cfg] ";
 bind "PRINTSCREEN";
 bind "SCROLLLOCK";
 bind "NUMLOCK";
@@ -16,8 +16,8 @@ bind "UPARROW";
 bind "LEFTARROW";
 bind "DOWNARROW";
 bind "RIGHTARROW";
-fin_echo "[60percentrow7.cfg] ";
+echoln "[60percentrow7.cfg] ";
 
 
 
-fin_echo "[60percentrow7.cfg] End of 60percentrow7.cfg";
+echoln "[60percentrow7.cfg] End of 60percentrow7.cfg";
