--- a/config/keys/numberpadkeys.cfg
+++ b/config/keys/numberpadkeys.cfg
@@ -1,8 +1,8 @@
-fin_echo "[numberpadkeys.cfg] Start of numberpadkeys.cfg";
+echoln "[numberpadkeys.cfg] Start of numberpadkeys.cfg";
 
 
 
-fin_echo "[numberpadkeys.cfg] ";
+echoln "[numberpadkeys.cfg] ";
 bind "NUMLOCKTOGGLE";
 bind "KP_DIVIDE";
 bind "KP_MULTIPLY";
@@ -20,8 +20,8 @@ bind "KP_PGDN";
 bind "KP_ENTER";
 bind "KP_INS";
 bind "KP_DEL";
-fin_echo "[numberpadkeys.cfg] ";
+echoln "[numberpadkeys.cfg] ";
 
 
 
-fin_echo "[numberpadkeys.cfg] End of numberpadkeys.cfg";
+echoln "[numberpadkeys.cfg] End of numberpadkeys.cfg";
