--- a/config/primary/networking.cfg
+++ b/config/primary/networking.cfg
@@ -1,8 +1,8 @@
-fin_echo "[networking.cfg] Start of networking.cfg";
+echoln "[networking.cfg] Start of networking.cfg";
 
 
 
-fin_echo "[networking.cfg] {1} Configuring client-side networking";
+echoln "[networking.cfg] {1} Configuring client-side networking";
 sv_unify_random_seed "true";                                    // Should we securely share seeds between the client and server?
 sv_usercmd_custom_random_seed "false";                          // When enabled server will populate an additional random seed independent of the client
 net_client_steamdatagram_enable_override "1";                   // 0: Use connect method requested by GC.  >0: Always use SDR if possible.  <0: Always use direct UDP if possible
@@ -29,7 +29,7 @@ rate "1000000";                                                 // Min bytes/sec
 // rate 1000000 = 7.8 mbps (maximum)
 
 
-fin_echo "[networking.cfg] {2} Configuring server-side networking (and tickrate)";
+echoln "[networking.cfg] {2} Configuring server-side networking (and tickrate)";
 sv_hibernate_postgame_delay "inf";                              // # of seconds to wait after final client leaves before hibernating.
 sv_hibernate_when_empty "false";                                // Puts the server into extremely low CPU usage mode when no clients connected
 sv_phys_sleep_enable "false";                                   // Enable sleeping for dynamic physics bodies.
@@ -40,4 +40,4 @@ engine_no_focus_sleep "0";                                      // This isn't of
 
 
 
-fin_echo "[networking.cfg] End of networking.cfg";
+echoln "[networking.cfg] End of networking.cfg";
