--- a/config/primary/visuals.cfg
+++ b/config/primary/visuals.cfg
@@ -1,8 +1,8 @@
-fin_echo "[visuals.cfg] Start of visuals.cfg";
+echoln "[visuals.cfg] Start of visuals.cfg";
 
 
 
-fin_echo "[visuals.cfg] {1} Changing viewmodel";
+echoln "[visuals.cfg] {1} Changing viewmodel";
 viewmodel_presetpos "0";                                        // Determines which preset viewmodel to use 0: None 1: Desktop 2: Couch 3: Classic
 fin_vmp_highfov;
 //fin_vmp_lowfov  - low FOV version of my main viewmodel preset
@@ -15,7 +15,7 @@ fin_vmp_highfov;
 //fin_vmp_classic - Classic preset (viewmodel_presetpos 3)
 
 
-fin_echo "[visuals.cfg] {2} Changing graphics settings";
+echoln "[visuals.cfg] {2} Changing graphics settings";
 mobile_fps_increase_during_charging "true";                     // MOBILE_FPS_CONTROL: If true we increase framerate limit while charging
 mobile_fps_increase_during_touch "true";                        // MOBILE_FPS_CONTROL: If true we increase framerate limit during touch
 mobile_fps_limit "0";                                           // MOBILE_FPS_CONTROL: Mobile FPS limit - 15, 30, 60
@@ -37,4 +37,4 @@ engine_low_latency_sleep_after_client_tick "true";              // When r_low_la
 
 
 
-fin_echo "[visuals.cfg] End of visuals.cfg";
+echoln "[visuals.cfg] End of visuals.cfg";
