--- a/config/rainbow_crosshair/rainbow_crosshair_3.cfg
+++ b/config/rainbow_crosshair/rainbow_crosshair_3.cfg
@@ -1,4 +1,4 @@
-fin_echo "[rainbow_crosshair_3.cfg] Start of rainbow_crosshair_3.cfg";
+echoln "[rainbow_crosshair_3.cfg] Start of rainbow_crosshair_3.cfg";
 
 
 
@@ -107,4 +107,4 @@ alias "fin_rainbow_crosshair_302" "cl_crosshaircolor_r 189; cl_crosshaircolor_g 
 
 
 
-fin_echo "[rainbow_crosshair_3.cfg] End of rainbow_crosshair_3.cfg";
+echoln "[rainbow_crosshair_3.cfg] End of rainbow_crosshair_3.cfg";
