--- a/config/rainbow_crosshair/rainbow_crosshair_4.cfg
+++ b/config/rainbow_crosshair/rainbow_crosshair_4.cfg
@@ -1,4 +1,4 @@
-fin_echo "[rainbow_crosshair_4.cfg] Start of rainbow_crosshair_4.cfg";
+echoln "[rainbow_crosshair_4.cfg] Start of rainbow_crosshair_4.cfg";
 
 
 
@@ -107,4 +107,4 @@ alias "fin_rainbow_crosshair_403" "cl_crosshaircolor_r  81;                     
 
 
 
-fin_echo "[rainbow_crosshair_4.cfg] End of rainbow_crosshair_4.cfg";
+echoln "[rainbow_crosshair_4.cfg] End of rainbow_crosshair_4.cfg";
