--- a/server_secrets.cfg.example
+++ b/server_secrets.cfg.example
@@ -1,4 +1,4 @@
-fin_echo "[server_secrets] Start of server_secrets";
+echoln "[server_secrets] Start of server_secrets";
 
 
 
@@ -10,4 +10,4 @@ rcon_password "QzXKuVDrvdhaxTiwainxgvk1$JDh2G9Ir";      // remote console passwo
 
 
 
-fin_echo "[server_secrets] Start of server_secrets";
+echoln "[server_secrets] Start of server_secrets";
